# chat-room-withCSS

./: .env  db.sqlite3  pyproject.toml  render.yaml  requirements.txt
base/: views.py
base/templates/base/: activity_component.html  feed_component.html  home.html  login_registration.html  room_form.html  topics_component.html
static/styles/: activity_component.css  feed_component.css  home.css  login_registration.css  main.css  nav.css  room_form.css  topics_component.css
studybud/: settings.py  urls.py
templates/: main.html  nav.html
