[tool.poetry]
name = "chatroom"
version = "1"
description = "xyz"
authors = ["Pratham Kakkad <prathamkakkad18@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
whitenoise = {extras = ["brotli"], version = "^6.6.0"}
gunicorn = "^21.2.0"
django = "^4.2.7"
dj-database-url = "^2.1.0"
psycopg2 = "^2.9.9"
packaging = "^23.2"
sqlparse = "^0.4.4"
tzdata = "^2023.3"
asgiref = "^3.7.2"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
